updated css with mobile styling

--- a/style.css
+++ b/style.css
@@ -98,14 +98,6 @@ body {
     transition: .4s;
 }
 
-/* input:checked + .slider {
-    background-color: #2196F3;
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-} */
-
 input:checked + .slider:before {
     -webkit-transform: translateX(42px);
     -ms-transform: translateX(42px);
@@ -246,7 +238,11 @@ input:checked + .slider:before {
 /* MOBILE FRIENDLY DESIGN */
 
 @media (max-width: 768px) {
-	.calc-buttons input {
+	body{
+        position: fixed;
+    }
+    
+    .calc-buttons input {
         width: 20%;
         margin: 4px;
     }
